# python-client-code-generator

./: README.md  data-sci-mdas_openapi.json  generate_build_client.sh
generator/: pyproject.toml
generator/data_sci_mdas/api/: __init__.py  activities_api.py  cycles_api.py  default_api.py  recoveries_api.py
generator/data_sci_mdas/models/: __init__.py  activity_source.py  activity_state.py  batch_create_mdas_activities_request.py  batch_create_mdas_cycles_request.py  batch_create_mdas_recoveries_request.py  bound_type.py  create_mdas_recovery_request.py  create_mdas_recovery_request_v2.py  cycle_state.py  date_range.py  date_time_tz_range.py  health_check.py  http_validation_error.py  models_api_v1_activities_requests_create_mdas_activity_request.py  models_api_v1_activities_requests_update_mdas_activity_request.py  models_api_v1_activities_responses_mdas_activity.py  models_api_v1_cycles_requests_create_mdas_cycle_request.py  models_api_v1_cycles_requests_update_mdas_cycle_request.py  models_api_v1_cycles_responses_mdas_cycle.py  models_api_v1_recoveries_responses_mdas_recovery.py  models_api_v2_activities_requests_create_mdas_activity_request.py  models_api_v2_activities_requests_update_mdas_activity_request.py  models_api_v2_activities_responses_mdas_activity.py  models_api_v2_cycles_requests_create_mdas_cycle_request.py  models_api_v2_cycles_requests_update_mdas_cycle_request.py  models_api_v2_cycles_responses_mdas_cycle.py  models_api_v2_recoveries_responses_mdas_recovery.py  score_state.py  (+5 more)
generator/python-pydantic-v1/: README.md  pyproject.toml  setup.py
(+113 files in other folders)
