[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data_sci_mdas"
version = "0.0.4"
description = "MDAS services client"
authors = []

[[tool.poetry.source]]
name = "whoop-pypi"
url = "https://whoop-688238828846.d.codeartifact.us-west-2.amazonaws.com/pypi/whoop-pypi/simple"

[[tool.poetry.source]]
name = "whoop-pypi-publish"
url = "https://whoop-688238828846.d.codeartifact.us-west-2.amazonaws.com/pypi/whoop-pypi/"

[tool.poetry.dependencies]
python = ">=3.8.12,<4.0"
pydantic = "^1.10.5, <2"
urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aenum = ">=3.1.11"
whoopcommons = "^1.0.3345"
whoop-service-clients = "0.1.1965b0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
line_length = 120